css fixes for alignment

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -51,10 +51,6 @@
     z-index: 99;
 }
 
-.content {
-    padding: 16px;
-}
-
 .sticky {
     position: fixed;
     top: 0;
